_sass/_index-mobile.scss
@media (max-width: 699px) {
  body.homepage {
    .nav-wrapper {
      nav {
        .right {
          display: none;
        }
      }
    }

    .hero {
      min-height: 800px;

      .cta-wrapper {
        align-content: center;


        .cta-container {
          padding-right: 15px;
          padding-left: 15px;

          &:nth-of-type(1),
          &:nth-of-type(2) {
            section {
              max-width: initial;
              text-align: center;
              padding-top: 10px;
              padding-right: 0;
              padding-bottom: 10px;
              padding-left: 0;
              border-right: 0;
              border-bottom: 1px solid rgba(255, 255, 255, 0.5);
            }
          }
        }
      }
    }
  }
}

